# SLEngine

./: .gitignore  CMakeLists.txt  README.md
src/: includes.h  main.cpp
src/menu/: Button.cpp  Button.h  Camera.cpp  Camera.h  GameWindow.cpp  GameWindow.h  Scene.cpp  Scene.h  StaticTexture.cpp  StaticTexture.h  TextLabel.cpp  TextLabel.h  UIObject.cpp  UIObject.h
src/objects/: Entity.cpp  Entity.h  GameObject.cpp  GameObject.h  Hitbox.cpp  Hitbox.h  PhysicsObject.cpp  PhysicsObject.h  StaticObject.cpp  StaticObject.h
src/types/: Position.h
